[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/background.png" type="Texture" id=1]
[ext_resource path="res://sprites/title.png" type="Texture" id=2]
[ext_resource path="res://fonts/vt323/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/menu_button.png" type="Texture" id=4]
[ext_resource path="res://sprites/menu_button_active.png" type="Texture" id=5]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=6]
[ext_resource path="res://audio/game_over.wav" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Environment" id=3]
background_mode = 4
background_energy = 7.74
background_canvas_max_layer = 1
ambient_light_color = Color( 0.0666667, 0.0588235, 0.0588235, 1 )
ambient_light_energy = 9.67
ambient_light_sky_contribution = 0.0
fog_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
fog_sun_color = Color( 0.301961, 0.0196078, 0.580392, 1 )
tonemap_mode = 2
dof_blur_near_distance = 0.1
dof_blur_near_transition = 0.11
dof_blur_near_amount = 0.09
glow_enabled = true
glow_intensity = 1.56
glow_strength = 0.76
glow_bloom = 0.52
glow_blend_mode = 1
glow_hdr_threshold = 0.5
glow_hdr_scale = 0.33
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=4]
size = 36
extra_spacing_top = 4
extra_spacing_bottom = 1
extra_spacing_char = 2
extra_spacing_space = -2
font_data = ExtResource( 3 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 493.48, 325.871 )
scale = Vector2( 133.304, 80.4257 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 512, 96 )
scale = Vector2( 0.127358, 0.127358 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Score" type="Label" parent="."]
margin_left = 284.0
margin_top = 252.0
margin_right = 741.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 300, 21 )
custom_fonts/font = SubResource( 4 )
text = "Score: 2350"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 284.0
margin_top = 180.0
margin_right = 741.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 300, 21 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.713726, 0.266667, 0.317647, 1 )
text = "Game Over"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 284.0
margin_top = 291.0
margin_right = 741.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 300, 21 )
custom_fonts/font = SubResource( 4 )
text = "Level: 2"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 416.0
margin_top = 423.0
margin_right = 800.0
margin_bottom = 537.0
rect_scale = Vector2( 0.5, 0.5 )
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="finished" from="GameMusic" to="." method="_on_GameMusic_finished"]
